# nweb-next

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  ENVIRONMENT.md  README.md  TODO.md  run-analyst.sh  vercel.json
analyst/: .env.example  .eslintrc.json  Makefile  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
analyst/app/: globals.css  layout.tsx  page.tsx
analyst/app/api/dashboard/: route.ts
analyst/app/api/dashboard/stats/: route.ts
analyst/app/api/getwork/: route.ts
analyst/app/api/host/: route.ts
analyst/app/api/search/: route.ts
analyst/app/api/status/: route.ts
analyst/app/api/submit/: route.ts
analyst/app/components/: DashboardStats.tsx  RecentActivity.tsx  Skeletons.tsx  TopIPs.tsx  TopServices.tsx
analyst/app/host/: page.tsx
analyst/app/search/: page.tsx
analyst/app/status/: page.tsx
analyst/components/: Navigation.tsx
analyst/lib/: api.ts  database.ts
analyst/types/: database.ts
contracts/: foundry.toml
contracts/cache/: solidity-files-cache.json
contracts/src/: Attestor.sol  GST.sol  SlashRouter.sol  StakeRegistry.sol  SubmissionRouter.sol
indexer/: Makefile  README.md  pyproject.toml  requirements.txt
indexer/indexer/: __init__.py  blockchain_watcher.py  cli.py  config.py  database.py  indexer.py  ipfs_client.py  models.py
indexer/tests/: test_indexer.py
testing/: README.md  generate_fake_data.py  populate_demo_data.sh  requirements.txt  setup_test_data.sh
